--- a/source/index.html
+++ b/source/index.html
@@ -4,9 +4,87 @@
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
   </head>
-  <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS. Адаптивная вёрстка и автоматизация</a>».</p>
-
+  <body class="page-body">
+    <header class="page-header">
+      <a class="page-header__logo">
+        <img src="img/logo/logo-mobile-cat.svg" width="33" height="38" alt="логотип мобильный">
+        <img src="img/logo/logo-2.svg" width="101" height="18" alt="кот энерджи">
+      </a>
+      <nav class="main-nav">
+        <ul class="main-nav__list">
+          <li class="main-nav__item main-nav__item--active">
+            <a href="#">
+              Главная
+            </a>
+          </li>
+          <li class="main-nav__item">
+            <a href="catalog.html">
+              Каталог продукции
+            </a>
+          </li>
+          <li class="main-nav__item">
+            <a href="program.html">
+              Подбор программы
+            </a>
+          </li>
+        </ul>
+        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      </nav>
+      <div class="functional-food">
+        <h1 class="functional-food__title">Функциональное питание для котов</h1>
+        <p class="functional-food__slogan">Занялся собой? Займись котом!</p>
+        <a href="program.html" class="functional-food__link-choose-program">подобрать программу</a>
+      </div>
+    </header>
+    <main class="page-main">
+      <h2 class="visually-hidden">Эфект от продукта</h2>
+      <section class="effect">
+        <div class="effect__weight-loss">
+          <h3 class="effect__weight-loss__title">похудение</h3>
+          <p class="effect__weight-loss__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+          <a href="catalog.html" class="effect__weight-loss__catalog-slim-link">
+            каталог slim
+          </a>
+        </div>
+        <div class="effect__weight-gain">
+          <h3 class="effect__weight-gain__title">Набор массы</h3>
+          <p class="effect__weight-gain__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+          <a href="catalog.html" class="effect__weight-gain__catalog-fat">каталог pro</a>
+        </div>
+      </section>
+      <section class="product-descriptions">
+        <h2 class="product-descriptions__title">Как это работает</h2>
+        <ul class="product-descriptions__list">
+          <li class="product-descriptions__item">
+            Функциональное питание содержит только полезные питательные вещества.
+          </li>
+          <li class="product-descriptions__item">
+            Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+          </li>
+          <li class="product-descriptions__item">
+            Замените один-два приема обычной еды на наше функциональное питание.
+          </li>
+          <li class="product-descriptions__item">
+            Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+          </li>
+        </ul>
+      </section>
+      <section class="example">
+        <h2 class="example__title">Живой пример</h2>
+        <p class="example__text">
+          Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+        </p>
+        <div class="example__parameters">
+          <div class="example__parameters__quantity-weight">
+            <div class="example__parameters__quantity-weight__weight">
+              5 кг
+            </div>
+            <div class="example__parameters__quantity-weight__desc">
+              5 кг
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
