--- a/source/index.html
+++ b/source/index.html
@@ -33,11 +33,13 @@
       <div class="functional-food">
         <h1 class="functional-food__title">Функциональное питание для котов</h1>
         <p class="functional-food__slogan">Занялся собой? Займись котом!</p>
+        <img src="img/logo/logo-product.jpg" alt="Логоьтп продукта" width="280" height="270">
         <a href="program.html" class="functional-food__link-choose-program">подобрать программу</a>
       </div>
     </header>
     <main class="page-main">
       <h2 class="visually-hidden">Эфект от продукта</h2>
+
       <section class="effect">
         <div class="effect__weight-loss">
           <h3 class="effect__weight-loss__title">похудение</h3>
@@ -52,6 +54,7 @@
           <a href="catalog.html" class="effect__weight-gain__catalog-fat">каталог pro</a>
         </div>
       </section>
+
       <section class="product-descriptions">
         <h2 class="product-descriptions__title">Как это работает</h2>
         <ul class="product-descriptions__list">
@@ -69,22 +72,74 @@
           </li>
         </ul>
       </section>
+
       <section class="example">
         <h2 class="example__title">Живой пример</h2>
         <p class="example__text">
           Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
         </p>
         <div class="example__parameters">
-          <div class="example__parameters__quantity-weight">
-            <div class="example__parameters__quantity-weight__weight">
+          <div class="example__parameters__quantity parameters-weight">
+            <p class="parameters-weight__text">
               5 кг
-            </div>
-            <div class="example__parameters__quantity-weight__desc">
-              5 кг
-            </div>
+            </p>
+            <p class="parameters-weight__desc">
+              снижение веса
+            </p>
+          </div>
+          <div class="example__parameters__quantity parameters-days">
+            <p class="parameters-days__text">
+              60 дней
+            </p>
+            <p class="parameters-days__desc">
+              затрачено времени
+            </p>
           </div>
         </div>
+        <p class="example__result">Затраты на питание: 15 000 РУБ.</p>
+        <label class="visually-hidden" for="selectingResult">Выбор результата</label>
+        <span class="example__start">было</span><input class="example__selecting-result" type="range" name="selectingResult"><span class="example__end">стало</span>
       </section>
+
+      <section class="our-address">
+        <h2 class="visually-hidden">Как нас найти</h2>
+        <div class="our-address__address address">
+          <p class="address__invitation">приглашаем к сотрудничеству дилеров!</p>
+          <p class="address__contacn">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        </div>
+        <div class="our-address__map map">
+          <img class="map__image" src="img/different/location.png" width="320" height="362" alt="Как нас найти">
+        </div>
+      </section>
+
     </main>
+    <footer class="page-footer">
+      <div class="page-footer__logo">
+        <a class="page-footer__logo__link" href="#"><img src="img/logo/logo-2.svg" width="128" height="24" alt="Логотип"></a>
+      </div>
+      <div class="page-footer__social social">
+        <ul class="social_list">
+          <li class="social__item">
+            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
+          </li>
+        </ul>
+      </div>
+      <div class="page-footer__copyright copyright">
+        <ul class="copyright_list">
+          <li class="copyright__item">
+            HTML Academy
+          </li>
+          <li class="copyright__item">
+            <img src="img/logo/htmlacademy.svg" width="27" height="34" alt="Логотип htmlacademy">
+          </li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
