--- a/source/index.html
+++ b/source/index.html
@@ -23,7 +23,7 @@
             </a>
           </li>
           <li class="main-nav__item">
-            <a href="program.html">
+            <a href="form.html">
               Подбор программы
             </a>
           </li>
@@ -34,7 +34,7 @@
         <h1 class="functional-food__title">Функциональное питание для котов</h1>
         <p class="functional-food__slogan">Занялся собой? Займись котом!</p>
         <img src="img/logo/logo-product.jpg" alt="Логоьтп продукта" width="280" height="270">
-        <a href="program.html" class="functional-food__link-choose-program">подобрать программу</a>
+        <a href="form.html" class="functional-food__link-choose-program">подобрать программу</a>
       </div>
     </header>
     <main class="page-main">
