--- a/source/index.html
+++ b/source/index.html
@@ -56,7 +56,7 @@
       </section>
 
       <section class="product-descriptions">
-        <h2 class="product-descriptions__title heading-seconadry">Как это работает</h2>
+        <h2 class="product-descriptions__title heading-secondary">Как это работает</h2>
         <ul class="product-descriptions__list">
           <li class="product-descriptions__item product-descriptions__item--utility">
             Функциональное питание содержит только полезные питательные вещества.
@@ -74,7 +74,7 @@
       </section>
 
       <section class="example">
-        <h2 class="example__title heading-seconadry">Живой пример</h2>
+        <h2 class="example__title heading-secondary">Живой пример</h2>
         <p class="example__text">
           Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
         </p>
