--- a/source/index.html
+++ b/source/index.html
@@ -118,7 +118,7 @@
         <a class="page-footer__link"><img src="img/logo/logo-2.svg" width="128" height="24" alt="Логотип"></a>
       </div>
       <div class="page-footer__social social">
-        <ul class="social_list">
+        <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
               <span class="visually-hidden">Мы в Вконтакте</span>
