--- a/source/form.html
+++ b/source/form.html
@@ -32,8 +32,8 @@
     </header>
 
     <main class="page-main page-main--font">
-      <h1 class="page-main-program__title">Подбор программы</h1>
-      <p class="page-main-program__text">Заполните анкету, и мы подберем программу питания для вашего кота</p>
+      <h1 class="page-main__title">Подбор программы</h1>
+      <p class="page-main__text">Заполните анкету, и мы подберем программу питания для вашего кота</p>
       <form class="program-selection" method="post" action="https://echo.htmlacademy.ru">
         <fieldset class="program-selection__cat-parameters cat-parameters">
           <ul class="cat-parameters__list">
