--- a/source/form.html
+++ b/source/form.html
@@ -45,13 +45,13 @@
         <fieldset class="program-selection__target-programs target-programs">
           <ul class="target-programs__list">
             <li class="target-programs__item">
-              <input class="target-programs__weight-loss" type="radio" name="weight-loss" checked><label class="program-selection__label" for="weight-loss">Похудение</label>
+              <input class="target-programs__weight-loss" type="radio" id="weight-loss" name="weight-loss" checked><label class="program-selection__label" for="weight-loss">Похудение</label>
             </li>
             <li class="target-programs__item">
-              <input class="target-programs__weight-gain" type="radio" name="weight-gain"><label class="program-selection__label" for="weight-gain">Набор веса</label>
+              <input class="target-programs__weight-gain" type="radio" id="weight-gain" name="weight-gain"><label class="program-selection__label" for="weight-gain">Набор веса</label>
             </li>
             <li class="target-programs__item">
-              <input class="target-programs__not-certainty" type="radio" name="not-certainty"><label class="program-selection__label" for="not-certainty">Не знаю (Нужен ваш совет)</label>
+              <input class="target-programs__not-certainty" type="radio" id="not-certainty" name="not-certainty"><label class="program-selection__label" for="not-certainty">Не знаю (Нужен ваш совет)</label>
             </li>
           </ul>
         </fieldset>
