--- a/source/form.html
+++ b/source/form.html
@@ -31,70 +31,88 @@
       </nav>
     </header>
 
-    <main class="page-main page-main--font">
+    <main class="page-main">
       <h1 class="page-main__title">Подбор программы</h1>
       <p class="page-main__text">Заполните анкету, и мы подберем программу питания для вашего кота</p>
-      <form class="program-selection" method="post" action="https://echo.htmlacademy.ru">
-        <fieldset class="program-selection__cat-parameters cat-parameters">
-          <ul class="cat-parameters__list">
-            <li class="cat-parameters__item"><label class="program-selection__label program-selection__label--field" for="name">Имя:*</label><input class="program-selection__field program-selection__field--name" type="text" id="name" name="name-field" placeholder="барсик"></li>
-            <li class="cat-parameters__item"><label class="program-selection__label program-selection__label--field" for="weight">Вес(кг):*</label><input class="program-selection__field program-selection__field--weight" type="text" id="weight" name="weight-field" placeholder="7"></li>
-            <li class="cat-parameters__item"><label class="program-selection__label program-selection__label--field" for="age">Имя:*</label><input class="program-selection__field program-selection__field--age" type="text" id="age" name="age-field" placeholder="7"></li>
-          </ul>
-        </fieldset>
-        <fieldset class="program-selection__target-programs target-programs">
-          <ul class="target-programs__list">
-            <li class="target-programs__item">
-              <input class="target-programs__weight-loss" type="radio" id="weight-loss" name="weight-loss" checked><label class="program-selection__label" for="weight-loss">Похудение</label>
+      <form class="form" method="post" action="https://echo.htmlacademy.ru">
+        <fieldset class="form__fieldset">
+          <ul class="fields-list">
+            <li class="fields-list__item">
+              <label class="form__label" for="name">Имя:*</label>
+              <input class="form__input form__input--name" type="text" id="name" name="name-field" placeholder="барсик">
             </li>
-            <li class="target-programs__item">
-              <input class="target-programs__weight-gain" type="radio" id="weight-gain" name="weight-gain"><label class="program-selection__label" for="weight-gain">Набор веса</label>
+            <li class="fields-list__item">
+              <label class="form__label" for="weight">Вес(кг):*</label>
+              <input class="form__input form__input--weight" type="text" id="weight" name="weight-field" placeholder="7">
             </li>
-            <li class="target-programs__item">
-              <input class="target-programs__not-certainty" type="radio" id="not-certainty" name="not-certainty"><label class="program-selection__label" for="not-certainty">Не знаю (Нужен ваш совет)</label>
+            <li class="fields-list__item">
+              <label class="form__label" for="age">Имя:*</label>
+              <input class="form__input form__input--age" type="text" id="age" name="age-field" placeholder="7">
             </li>
           </ul>
         </fieldset>
-        <fieldset class="program-selection__contact contact">
-          <h2 class="contact__title heading-program">Контактные данные (владельца кота)</h2>
-          <ul class="contact__list">
-            <li class="contact__item"><label class="program-selection__label program-selection__label--field" for="email">E-mail:*</label><input class="program-selection__field program-selection__field--email" type="text" id="email" name="email-field" placeholder="kuklachev@gmail.com"></li>
-            <li class="contact__item"><label class="program-selection__label program-selection__label--field" for="tel">Телефон:*</label><input class="program-selection__field program-selection__field--tel" type="tel" id="tel" name="tel-field" placeholder="8 (960) 900-60-90"></li>
+        <fieldset class="form__fieldset">
+          <ul class="fields-list">
+            <li class="radio">
+              <input class="radio__input visually-hidden" type="radio" id="weight-loss" name="weight-loss" checked>
+              <label class="radio__label" for="weight-loss">Похудение</label>
+            </li>
+            <li class="radio">
+              <input class="radio__input visually-hidden" type="radio" id="weight-gain" name="weight-gain">
+              <label class="radio__label" for="weight-gain">Набор веса</label>
+            </li>
+            <li class="radio">
+              <input class="radio__input visually-hidden" type="radio" id="not-certainty" name="not-certainty">
+              <label class="radio__label" for="not-certainty">Не знаю (Нужен ваш совет)</label>
+            </li>
           </ul>
         </fieldset>
-        <fieldset class="program-selection__comment comment">
-          <h2 class="comment__title heading-program">Комментарий</h2>
+        <fieldset class="form__fieldset">
+          <legend class="form__legend">Контактные данные (владельца кота)</legend>>
+          <ul class="fields-list">
+            <li class="fields-list__item">
+              <label class="form__label" for="email">E-mail:*</label>
+              <input class="form__input form__input--email" type="text" id="email" name="email-field" placeholder="kuklachev@gmail.com">
+            </li>
+            <li class="fields-list__item">
+              <label class="form__label" for="tel">Телефон:*</label>
+              <input class="form__input form__input--tel" type="tel" id="tel" name="tel-field" placeholder="8 (960) 900-60-90">
+            </li>
+          </ul>
+        </fieldset>
+        <fieldset class="form__fieldset">
+          <legend class="form__legend">Комментарий</legend>
           <label class="visually-hidden" for="comment">Текст комментария</label>
-          <textarea class="comment__area" id="comment" name="comment-field"></textarea>
+          <textarea class="form__textarea" id="comment" name="comment-field"></textarea>
         </fieldset>
-        <fieldset class="program-selection__additional-information additional-information">
-          <h2 class="additional-information__title heading-program">Дополнительно</h2>
-          <ul class="additional-information__list">
-            <li class="additional-information__item">
-              <input class="additional-information__checkbox" type="checkbox" id="sweetener" name="sweetener-checkbox" checked>
-              <label class="program-selection__label program-selection__label--checkbox" for="sweetener">сахарозаменитель</label>
+        <fieldset class="form__fieldset">
+          <legend class="form__fieldset__legend">Дополнительно</legend>>
+          <ul class="fields-list">
+            <li class="checkbox">
+              <input class="checkbox__input visually-hidden" type="checkbox" id="sweetener" name="sweetener-checkbox" checked>
+              <label class="checkbox__label" for="sweetener">Сахарозаменитель</label>
             </li>
-            <li class="additional-information__item">
-              <input class="additional-information__checkbox" type="checkbox" id="drinking-water" name="drinking-water-checkbox">
-              <label class="program-selection__label program-selection__label--checkbox" for="drinking-water">питьевая вода</label>
+            <li class="checkbox">
+              <input class="checkbox__input visually-hidden" type="checkbox" id="drinking-water" name="drinking-water-checkbox">
+              <label class="checkbox__label" for="drinking-water">Питьевая вода</label>
             </li>
-            <li class="additional-information__item">
-              <input class="additional-information__checkbox" type="checkbox" id="milk" name="milk-checkbox">
-              <label class="program-selection__label program-selection__label--checkbox" for="milk">молоко</label>
+            <li class="checkbox">
+              <input class="checkbox__input visually-hidden" type="checkbox" id="milk" name="milk-checkbox">
+              <label class="checkbox__label" for="milk">Молоко</label>
             </li>
-            <li class="additional-information__item">
-              <input class="additional-information__checkbox" type="checkbox" id="vitamins" name="vitamins-checkbox">
-              <label class="program-selection__label program-selection__label--checkbox" for="vitamins">витамины</label>
+            <li class="checkbox">
+              <input class="checkbox__input visually-hidden" type="checkbox" id="vitamins" name="vitamins-checkbox">
+              <label class="checkbox__label" for="vitamins">Витамины</label>
             </li>
           </ul>
         </fieldset>
-        <button class="button program-selection__button" type="submit">отправить заявку</button>
-        <p class="program-selection__legend">* — Обязательные поля</p>
+        <button class="button form__button" type="submit">Отправить заявку</button>
+        <p class="form__legend">* — Обязательные поля</p>
       </form>
       <section class="our-address our-address--font">
         <h2 class="visually-hidden">Как нас найти</h2>
         <div class="our-address__address address">
-          <p class="address__invitation">приглашаем к сотрудничеству дилеров!</p>
+          <p class="address__invitation">Приглашаем к сотрудничеству дилеров!</p>
           <address class="address__contacn">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
         </div>
         <div class="our-address__map map">
