--- a/source/form.html
+++ b/source/form.html
@@ -86,7 +86,7 @@
           <textarea class="form__textarea" id="comment" name="comment-field"></textarea>
         </fieldset>
         <fieldset class="form__fieldset">
-          <legend class="form__fieldset__legend">Дополнительно</legend>>
+          <legend class="form__legend">Дополнительно</legend>>
           <ul class="fields-list">
             <li class="checkbox">
               <input class="checkbox__input visually-hidden" type="checkbox" id="sweetener" name="sweetener-checkbox" checked>
