--- a/source/form.html
+++ b/source/form.html
@@ -107,7 +107,7 @@
           </ul>
         </fieldset>
         <button class="button form__button" type="submit">Отправить заявку</button>
-        <p class="form__legend">* — Обязательные поля</p>
+        <p class="form__legend-text">* — Обязательные поля</p>
       </form>
       <section class="our-address our-address--font">
         <h2 class="visually-hidden">Как нас найти</h2>
