разметка третьей странице1

--- a/source/form.html
+++ b/source/form.html
@@ -39,15 +39,15 @@
           <ul class="fields-list">
             <li class="fields-list__item">
               <label class="form__label" for="name">Имя:*</label>
-              <input class="form__input form__input--name" type="text" id="name" name="name-field" placeholder="барсик">
+              <input class="form__input" type="text" id="name" name="name-field" placeholder="барсик">
             </li>
             <li class="fields-list__item">
               <label class="form__label" for="weight">Вес(кг):*</label>
-              <input class="form__input form__input--weight" type="text" id="weight" name="weight-field" placeholder="7">
+              <input class="form__input" type="text" id="weight" name="weight-field" placeholder="7">
             </li>
             <li class="fields-list__item">
               <label class="form__label" for="age">Имя:*</label>
-              <input class="form__input form__input--age" type="text" id="age" name="age-field" placeholder="7">
+              <input class="form__input" type="text" id="age" name="age-field" placeholder="7">
             </li>
           </ul>
         </fieldset>
