--- a/source/catalog.html
+++ b/source/catalog.html
@@ -38,134 +38,134 @@
         <h2 class="visually-hidden">Каталог энергетической еды</h2>
         <ul class="products">
           <li class="products__item product">
-            <img class="product__image" src="img/product/chicken-500.jpg" alt="Куриная энергетическая еда 500г">
-            <h3 class="product__title subtitle">Cat Energy PRO 500 г</h3>
+            <a class="product__card-link" href="#"><img class="product__image" src="img/product/chicken-500.jpg" alt="Куриная энергетическая еда 500г"></a>
+            <a class="product__card-link" href="#"><h3 class="product__title subtitle">Cat Energy PRO 500 г</h3></a>
             <table class="product__table">
               <tr class="product__row">
                 <th class="product__cell">Масса</th>
-                <th class="product__cell">500 г</th>
+                <td class="product__cell">500 г</td>
               </tr>
               <tr class="product__row">
                 <th class="product__cell">Вкус</th>
-                <th class="product__cell">Курица</th>
+                <td class="product__cell">Курица</td>
               </tr>
               <tr class="product__row">
                 <th class="product__cell">Цена</th>
-                <th class="product__cell">700 Р.</th>
+                <td class="product__cell">700 Р.</td>
               </tr>
             </table>
             <a href="form.html" class="button product__link">Заказать</a>
           </li>
           <li class="products__item product">
-            <img class="product__image" src="img/product/chicken-1000.jpg" alt="Куриная энергетическая еда 1000г">
-            <h3 class="product__title subtitle">Cat Energy PRO 1000 г</h3>
+            <a class="product__card-link" href="#"><img class="product__image" src="img/product/chicken-1000.jpg" alt="Куриная энергетическая еда 1000г"></a>
+            <a class="product__card-link" href="#">1<h3 class="product__title subtitle">Cat Energy PRO 1000 г</h3></a>
             <table class="product__table">
               <tr class="product__row">
                 <th class="product__cell">Масса</th>
-                <th class="product__cell">1000 г</th>
+                <td class="product__cell">1000 г</td>
               </tr>
               <tr class="product__row">
                 <th class="product__cell">Вкус</th>
-                <th class="product__cell">Курица</th>
+                <td class="product__cell">Курица</td>
               </tr>
               <tr class="product__row">
                 <th class="product__cell">Цена</th>
-                <th class="product__cell">1000 Р.</th>
+                <td class="product__cell">1000 Р.</td>
               </tr>
             </table>
             <a href="form.html" class="button product__link">Заказать</a>
           </li>
           <li class="products__item product">
-            <img class="product__image" src="img/product/fish-500.jpg" alt="Рыбная энергетическая еда 500г">
-            <h3 class="product__title subtitle">Cat Energy PRO 500 г</h3>
+            <a class="product__card-link" href="#"><img class="product__image" src="img/product/fish-500.jpg" alt="Рыбная энергетическая еда 500г"></a>
+            <a class="product__card-link" href="#"><h3 class="product__title subtitle">Cat Energy PRO 500 г</h3></a>
             <table class="product__table">
               <tr class="product__row">
                 <th class="product__cell">Масса</th>
-                <th class="product__cell">500 г</th>
+                <td class="product__cell">500 г</td>
               </tr>
               <tr class="product__row">
                 <th class="product__cell">Вкус</th>
-                <th class="product__cell">Рыба</th>
+                <td class="product__cell">Рыба</td>
               </tr>
               <tr class="product__row">
                 <th class="product__cell">Цена</th>
-                <th class="product__cell">700 Р.</th>
+                <td class="product__cell">700 Р.</td>
               </tr>
             </table>
             <a href="form.html" class="button product__link">Заказать</a>
           </li>
           <li class="products__item product">
-            <img class="product__image" src="img/product/fish-1000.jpg" alt="Рыбная энергетическая еда 500г">
-            <h3 class="product__title subtitle">Cat Energy PRO 1000 г</h3>
+            <a class="product__card-link" href="#"><img class="product__image" src="img/product/fish-1000.jpg" alt="Рыбная энергетическая еда 500г"></a>
+            <a class="product__card-link" href="#"><h3 class="product__title subtitle">Cat Energy PRO 1000 г</h3></a>
             <table class="product__table">
               <tr class="product__row">
                 <th class="product__cell">Масса</th>
-                <th class="product__cell">1000 г</th>
+                <td class="product__cell">1000 г</td>
               </tr>
               <tr class="product__row">
                 <th class="product__cell">Вкус</th>
-                <th class="product__cell">Рыба</th>
+                <td class="product__cell">Рыба</td>
               </tr>
               <tr class="product__row">
                 <th class="product__cell">Цена</th>
-                <th class="product__cell">1000 Р.</th>
+                <td class="product__cell">1000 Р.</td>
               </tr>
             </table>
             <a href="form.html" class="button product__link">Заказать</a>
           </li>
           <li class="products__item product">
-            <img class="product__image" src="img/product/buckwheat-500.jpg" alt="Гречневая энергетическая еда 500г">
-            <h3 class="product__title subtitle">Cat Energy slim 500 г</h3>
+            <a class="product__card-link" href="#"><img class="product__image" src="img/product/buckwheat-500.jpg" alt="Гречневая энергетическая еда 500г"></a>
+            <a class="product__card-link" href="#"><h3 class="product__title subtitle">Cat Energy slim 500 г</h3></a>
             <table class="product__table">
               <tr class="product__row">
                 <th class="product__cell">Масса</th>
-                <th class="product__cell">500 г</th>
+                <td class="product__cell">500 г</td>
               </tr>
               <tr class="product__row">
                 <th class="product__cell">Вкус</th>
-                <th class="product__cell">Гречка</th>
+                <td class="product__cell">Гречка</td>
               </tr>
               <tr class="product__row">
                 <th class="product__cell">Цена</th>
-                <th class="product__cell">400 Р.</th>
+                <td class="product__cell">400 Р.</td>
               </tr>
             </table>
             <a href="form.html" class="button product__link">Заказать</a>
           </li>
           <li class="products__item product">
-            <img class="product__image" src="img/product/buckwheat-1000.jpg" alt="Гречневая энергетическая еда 500г">
-            <h3 class="product__title subtitle">Cat Energy slim 1000 г</h3>
+            <a class="product__card-link" href="#"><img class="product__image" src="img/product/buckwheat-1000.jpg" alt="Гречневая энергетическая еда 500г"></a>
+            <a class="product__card-link" href="#"><h3 class="product__title subtitle">Cat Energy slim 1000 г</h3></a>
             <table class="product__table">
               <tr class="product__row">
                 <th class="product__cell">Масса</th>
-                <th class="product__cell">1000 г</th>
+                <td class="product__cell">1000 г</td>
               </tr>
               <tr class="product__row">
                 <th class="product__cell">Вкус</th>
-                <th class="product__cell">Гречка</th>
+                <td class="product__cell">Гречка</td>
               </tr>
               <tr class="product__row">
                 <th class="product__cell">Цена</th>
-                <th class="product__cell">700 Р.</th>
+                <td class="product__cell">700 Р.</td>
               </tr>
             </table>
             <a href="form.html" class="button product__link">Заказать</a>
           </li>
           <li class="products__item product">
-            <img class="product__image" src="img/product/rice-500.jpg" alt="Рисовая энергетическая еда 500г">
-            <h3 class="product__title subtitle">Cat Energy slim 500 г</h3>
+            <a class="product__card-link" href="#"><img class="product__image" src="img/product/rice-500.jpg" alt="Рисовая энергетическая еда 500г"></a>
+            <a class="product__card-link" href="#"><h3 class="product__title subtitle">Cat Energy slim 500 г</h3></a>
             <table class="product__table">
               <tr class="product__row">
                 <th class="product__cell">Масса</th>
-                <th class="product__cell">500 г</th>
+                <td class="product__cell">500 г</td>
               </tr>
               <tr class="product__row">
                 <th class="product__cell">Вкус</th>
-                <th class="product__cell">Рис</th>
+                <td class="product__cell">Рис</td>
               </tr>
               <tr class="product__row">
                 <th class="product__cell">Цена</th>
-                <th class="product__cell">500 Р.</th>
+                <td class="product__cell">500 Р.</td>
               </tr>
             </table>
             <a href="form.html" class="button product__link">Заказать</a>
@@ -174,11 +174,11 @@
         <div class="energy-food__more-products">
           <h3 class="energy-food__title subtitle">Показать еще 100500 товаров</h3>
           <p class="energy-food__text">На самом деле вкусов гораздо больше!</p>
-          <a href="form.html" class="button energy-food__link">Заказать</a>
+          <a href="form.html" class="button energy-food__link">Показать все</a>
         </div>
       </section>
-      <section class="different-products">
-        <h2 class="different-products__title">Дополнительные товары</h2>
+      <section class="additional-products">
+        <h2 class="additional-products__title">Дополнительные товары</h2>
         <ul class="additional-products">
           <li class="additional-products__item">
             <h3 class="additional-products__title">Сахарозаменитель</h3>
@@ -201,18 +201,18 @@
             <a href="form.html" class="button additional-products__link">Заказать</a>
           </li>
         </ul>
-        <div class="different-products__stocks stoks">
-          <p class="stoks__text">Закажите все и получите чехол для кота в подарок!</p>
+        <div class="additional-products__stocks">
+          <p class="additional-products__text">Закажите все и получите чехол для кота в подарок!</p>
         </div>
       </section>
       <section class="our-address our-address--font">
         <h2 class="visually-hidden">Как нас найти</h2>
-        <div class="our-address__address address">
-          <p class="address__invitation">Приглашаем к сотрудничеству дилеров!</p>
-          <address class="address__contacn">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
+        <div class="our-address__address">
+          <p class="our-address__invitation">Приглашаем к сотрудничеству дилеров!</p>
+          <address class="our-address__contacn">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
         </div>
-        <div class="our-address__map map">
-          <img class="map__image" src="img/different/location.png" width="320" height="362" alt="Как нас найти">
+        <div class="our-address__map">
+          <img class="our-address__image" src="img/different/location.png" width="320" height="362" alt="Как нас найти">
         </div>
       </section>
     </main>
