--- a/source/form.html
+++ b/source/form.html
@@ -111,12 +111,12 @@
       </form>
       <section class="our-address our-address--font">
         <h2 class="visually-hidden">Как нас найти</h2>
-        <div class="our-address__address address">
-          <p class="address__invitation">Приглашаем к сотрудничеству дилеров!</p>
-          <address class="address__contacn">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
+        <div class="our-address__address">
+          <p class="our-address__invitation">Приглашаем к сотрудничеству дилеров!</p>
+          <address class="our-address__contacn">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
         </div>
-        <div class="our-address__map map">
-          <img class="map__image" src="img/different/location.png" width="320" height="362" alt="Как нас найти">
+        <div class="our-address__map">
+          <img class="our-address__image" src="img/different/location.png" width="320" height="362" alt="Как нас найти">
         </div>
       </section>
     </main>
