--- a/source/catalog.html
+++ b/source/catalog.html
@@ -38,8 +38,8 @@
         <h2 class="visually-hidden">Каталог энергетической еды</h2>
         <ul class="products">
           <li class="products__item product">
-            <a class="product__card-link" href="#"><img class="product__image" src="img/product/chicken-500.jpg" alt="Куриная энергетическая еда 500г"></a>
-            <a class="product__card-link" href="#"><h3 class="product__title subtitle">Cat Energy PRO 500 г</h3></a>
+            <a class="product__image-link" href="#"><img class="product__image" src="img/product/chicken-500.jpg" alt="Куриная энергетическая еда 500г"></a>
+            <h3 class="product__title subtitle"><a class="product__title-link" href="#">Cat Energy PRO 500 г</a></h3>
             <table class="product__table">
               <tr class="product__row">
                 <th class="product__cell">Масса</th>
@@ -57,8 +57,8 @@
             <a href="form.html" class="button product__link">Заказать</a>
           </li>
           <li class="products__item product">
-            <a class="product__card-link" href="#"><img class="product__image" src="img/product/chicken-1000.jpg" alt="Куриная энергетическая еда 1000г"></a>
-            <a class="product__card-link" href="#">1<h3 class="product__title subtitle">Cat Energy PRO 1000 г</h3></a>
+            <a class="product__image-link" href="#"><img class="product__image" src="img/product/chicken-1000.jpg" alt="Куриная энергетическая еда 1000г"></a>
+            <h3 class="product__title subtitle"><a class="product__title-link" href="#">Cat Energy PRO 1000 г</a></h3>
             <table class="product__table">
               <tr class="product__row">
                 <th class="product__cell">Масса</th>
@@ -76,8 +76,8 @@
             <a href="form.html" class="button product__link">Заказать</a>
           </li>
           <li class="products__item product">
-            <a class="product__card-link" href="#"><img class="product__image" src="img/product/fish-500.jpg" alt="Рыбная энергетическая еда 500г"></a>
-            <a class="product__card-link" href="#"><h3 class="product__title subtitle">Cat Energy PRO 500 г</h3></a>
+            <a class="product__image-link" href="#"><img class="product__image" src="img/product/fish-500.jpg" alt="Рыбная энергетическая еда 500г"></a>
+            <h3 class="product__title subtitle"><a class="product__title-link" href="#">Cat Energy PRO 500 г</a></h3>
             <table class="product__table">
               <tr class="product__row">
                 <th class="product__cell">Масса</th>
@@ -95,8 +95,8 @@
             <a href="form.html" class="button product__link">Заказать</a>
           </li>
           <li class="products__item product">
-            <a class="product__card-link" href="#"><img class="product__image" src="img/product/fish-1000.jpg" alt="Рыбная энергетическая еда 500г"></a>
-            <a class="product__card-link" href="#"><h3 class="product__title subtitle">Cat Energy PRO 1000 г</h3></a>
+            <a class="product__image-link" href="#"><img class="product__image" src="img/product/fish-1000.jpg" alt="Рыбная энергетическая еда 500г"></a>
+            <h3 class="product__title subtitle"><a class="product__title-link" href="#">Cat Energy PRO 1000 г</a></h3>
             <table class="product__table">
               <tr class="product__row">
                 <th class="product__cell">Масса</th>
@@ -114,8 +114,8 @@
             <a href="form.html" class="button product__link">Заказать</a>
           </li>
           <li class="products__item product">
-            <a class="product__card-link" href="#"><img class="product__image" src="img/product/buckwheat-500.jpg" alt="Гречневая энергетическая еда 500г"></a>
-            <a class="product__card-link" href="#"><h3 class="product__title subtitle">Cat Energy slim 500 г</h3></a>
+            <a class="product__image-link" href="#"><img class="product__image" src="img/product/buckwheat-500.jpg" alt="Гречневая энергетическая еда 500г"></a>
+            <h3 class="product__title subtitle"><a class="product__title-link" href="#">Cat Energy slim 500 г</a></h3>
             <table class="product__table">
               <tr class="product__row">
                 <th class="product__cell">Масса</th>
@@ -133,8 +133,8 @@
             <a href="form.html" class="button product__link">Заказать</a>
           </li>
           <li class="products__item product">
-            <a class="product__card-link" href="#"><img class="product__image" src="img/product/buckwheat-1000.jpg" alt="Гречневая энергетическая еда 500г"></a>
-            <a class="product__card-link" href="#"><h3 class="product__title subtitle">Cat Energy slim 1000 г</h3></a>
+            <a class="product__image-link" href="#"><img class="product__image" src="img/product/buckwheat-1000.jpg" alt="Гречневая энергетическая еда 500г"></a>
+            <h3 class="product__title subtitle"><a class="product__title-link" href="#">Cat Energy slim 1000 г</a></h3>
             <table class="product__table">
               <tr class="product__row">
                 <th class="product__cell">Масса</th>
@@ -152,8 +152,8 @@
             <a href="form.html" class="button product__link">Заказать</a>
           </li>
           <li class="products__item product">
-            <a class="product__card-link" href="#"><img class="product__image" src="img/product/rice-500.jpg" alt="Рисовая энергетическая еда 500г"></a>
-            <a class="product__card-link" href="#"><h3 class="product__title subtitle">Cat Energy slim 500 г</h3></a>
+            <a class="product__image-link" href="#"><img class="product__image" src="img/product/rice-500.jpg" alt="Рисовая энергетическая еда 500г"></a>
+            <h3 class="product__title subtitle"><a class="product__title-link" href="#">Cat Energy slim 500 г</a></h3>
             <table class="product__table">
               <tr class="product__row">
                 <th class="product__cell">Масса</th>
@@ -209,7 +209,7 @@
         <h2 class="visually-hidden">Как нас найти</h2>
         <div class="our-address__address">
           <p class="our-address__invitation">Приглашаем к сотрудничеству дилеров!</p>
-          <address class="our-address__contacn">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
+          <address class="our-address__contact">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
         </div>
         <div class="our-address__map">
           <img class="our-address__image" src="img/different/location.png" width="320" height="362" alt="Как нас найти">
