--- a/source/index.html
+++ b/source/index.html
@@ -105,7 +105,7 @@
         <h2 class="visually-hidden">Как нас найти</h2>
         <div class="our-address__address">
           <p class="our-address__invitation">приглашаем к сотрудничеству дилеров!</p>
-          <address class="our-address__contacn">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
+          <address class="our-address__contact">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
         </div>
         <div class="our-address__map">
           <img class="our-address__image" src="img/different/location.png" width="320" height="362" alt="Как нас найти">
