--- a/source/index.html
+++ b/source/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
-  <body class="page-body">
+  <body class="page__body">
     <header class="page-header">
       <a class="page-header__logo">
-        <img src="img/logo/logo-mobile-cat.svg" width="33" height="38" alt="логотип мобильный">
+        <img src="img/logo/logo-mobile-cat.svg" width="191" height="37" alt="логотип мобильный">
       </a>
       <nav class="main-nav">
         <ul class="main-nav__list">
@@ -32,7 +33,7 @@
       <div class="functional-food">
         <h1 class="functional-food__title">Функциональное питание для котов</h1>
         <p class="functional-food__slogan">Занялся собой? Займись котом!</p>
-        <img src="img/logo/logo-product.jpg" alt="Логоьтп продукта" width="280" height="270">
+        <img src="img/logo/logo-product.jpg" alt="Логотип продукта" width="280" height="270">
         <a href="form.html" class="button functional-food__link">подобрать программу</a>
       </div>
     </header>
@@ -80,7 +81,7 @@
         </p>
         <ul class="example__list">
           <li class="example__item">
-            <p class="example__text">
+            <p class="example__item-text">
               5 кг
             </p>
             <p class="example__desc">
@@ -88,7 +89,7 @@
             </p>
           </li>
           <li class="example__item">
-            <p class="example__text">
+            <p class="example__item-text">
               60 дней
             </p>
             <p class="example__desc">
@@ -98,7 +99,7 @@
         </ul>
         <p class="example__result">Затраты на питание: 15 000 РУБ.</p>
         <label class="visually-hidden" for="selectingResult">Выбор результата</label>
-        <span class="example__start">было</span><input class="example__selecting-result" type="range" name="selectingResult"><span class="example__end">стало</span>
+        <span class="example__restriction">было</span><input class="example__selecting-result" type="range" name="selectingResult"><span class="example__restriction">стало</span>
       </section>
 
       <section class="our-address">
