--- a/source/index.html
+++ b/source/index.html
@@ -13,17 +13,17 @@
       <nav class="main-nav">
         <ul class="main-nav__list">
           <li class="main-nav__item main-nav__item--active">
-            <a href="#">
+            <a class="main-nav__link" href="#">
               Главная
             </a>
           </li>
-          <li class="main-nav__item">
+          <li class="main-nav__link" class="main-nav__item">
             <a href="catalog.html">
               Каталог продукции
             </a>
           </li>
           <li class="main-nav__item">
-            <a href="form.html">
+            <a class="main-nav__link" href="form.html">
               Подбор программы
             </a>
           </li>
@@ -112,8 +112,8 @@
           <img class="our-address__image" src="img/different/location.png" width="320" height="362" alt="Как нас найти">
         </div>
       </section>
-
     </main>
+
     <footer class="page-footer">
       <div class="page-footer__logo">
         <a class="page-footer__link"><img src="img/logo/logo-2.svg" width="128" height="24" alt="Логотип"></a>
