--- a/source/index.html
+++ b/source/index.html
@@ -33,7 +33,7 @@
       <div class="functional-food">
         <h1 class="functional-food__title">Функциональное питание для котов</h1>
         <p class="functional-food__slogan">Занялся собой? Займись котом!</p>
-        <img src="img/logo/logo-product.jpg" alt="Логотип продукта" width="280" height="270">
+        <img src="img/logo/logo-product.png" alt="Логотип продукта" width="280" height="270">
         <a href="form.html" class="button functional-food__link">подобрать программу</a>
       </div>
     </header>
@@ -49,7 +49,7 @@
             <a href="catalog.html" class="effect__item-link">каталог slim</a>
           </li>
           <li class="effect__item effect__item--weight-gain">
-            <h3 class="effect__item-itle">Набор массы</h3>
+            <h3 class="effect__item-title">Набор массы</h3>
             <p class="effect__item-text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
             <a href="catalog.html" class="effect__item-link">каталог pro</a>
           </li>
