--- a/source/form.html
+++ b/source/form.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
-  <body class="page-body">
+  <body class="page__body">
     <header class="page-header">
       <a class="page-header__logo">
-        <img src="img/logo/logo-mobile-cat.svg" width="33" height="38" alt="логотип мобильный">
+        <img src="img/logo/logo-mobile-cat.svg" width="191" height="37" alt="логотип мобильный">
       </a>
       <nav class="main-nav">
         <ul class="main-nav__list">
           <li class="main-nav__item">
-            <a>
+            <a class="main-nav__link" href="index.html">
               Главная
             </a>
           </li>
           <li class="main-nav__item">
-            <a href="catalog.html">
+            <a class="main-nav__link" href="catalog.html">
               Каталог продукции
             </a>
           </li>
           <li class="main-nav__item main-nav__item--active">
-            <a href="form.html">
+            <a class="main-nav__link">
               Подбор программы
             </a>
           </li>
