--- a/source/form.html
+++ b/source/form.html
@@ -36,23 +36,23 @@
       <h1 class="page-main__title">Подбор программы</h1>
       <p class="page-main__text">Заполните анкету, и мы подберем программу питания для вашего кота</p>
       <form class="form" method="post" action="https://echo.htmlacademy.ru">
-        <fieldset class="form__fieldset">
+        <fieldset class="form__fieldset form__fieldset--separator">
           <ul class="fields-list">
             <li class="fields-list__item">
               <label class="form__label" for="name">Имя:*</label>
               <input class="form__input" type="text" id="name" name="name-field" placeholder="барсик">
             </li>
             <li class="fields-list__item">
-              <label class="form__label" for="weight">Вес(кг):*</label>
+              <label class="form__label" for="weight">Вес (кг):*</label>
               <input class="form__input" type="text" id="weight" name="weight-field" placeholder="7">
             </li>
             <li class="fields-list__item">
-              <label class="form__label" for="age">Имя:*</label>
+              <label class="form__label" for="age">Возраст (лет):</label>
               <input class="form__input" type="text" id="age" name="age-field" placeholder="7">
             </li>
           </ul>
         </fieldset>
-        <fieldset class="form__fieldset">
+        <fieldset class="form__fieldset form__fieldset--separator">
           <ul class="fields-list">
             <li class="radio">
               <input class="radio__input visually-hidden" type="radio" id="weight-loss" name="weight-loss" checked>
