--- a/source/index.html
+++ b/source/index.html
@@ -17,8 +17,8 @@
               Главная
             </a>
           </li>
-          <li class="main-nav__link" class="main-nav__item">
-            <a href="catalog.html">
+          <li class="main-nav__item" class="main-nav__item">
+            <a class="main-nav__link" href="catalog.html">
               Каталог продукции
             </a>
           </li>
