--- a/source/form.html
+++ b/source/form.html
@@ -69,7 +69,7 @@
           </ul>
         </fieldset>
         <fieldset class="form__fieldset">
-          <legend class="form__legend">Контактные данные (владельца кота)</legend>>
+          <legend class="form__legend">Контактные данные (владельца кота)</legend>
           <ul class="fields-list">
             <li class="fields-list__item">
               <label class="form__label" for="email">E-mail:*</label>
@@ -84,10 +84,10 @@
         <fieldset class="form__fieldset">
           <legend class="form__legend">Комментарий</legend>
           <label class="visually-hidden" for="comment">Текст комментария</label>
-          <textarea class="form__textarea" id="comment" name="comment-field"></textarea>
+          <textarea class="form__textarea" id="comment" name="comment-field" placeholder="Расскажите обо всех повАдках кота"></textarea>
         </fieldset>
         <fieldset class="form__fieldset">
-          <legend class="form__legend">Дополнительно</legend>>
+          <legend class="form__legend">Дополнительно</legend>
           <ul class="fields-list">
             <li class="checkbox">
               <input class="checkbox__input visually-hidden" type="checkbox" id="sweetener" name="sweetener-checkbox" checked>
