--- a/source/index.html
+++ b/source/index.html
@@ -34,7 +34,7 @@
         <h1 class="functional-food__title">Функциональное питание для котов</h1>
         <p class="functional-food__slogan">Занялся собой? Займись котом!</p>
         <img src="img/logo/logo-product.png" alt="Логотип продукта" width="280" height="270">
-        <a href="form.html" class="button functional-food__link">подобрать программу</a>
+        <a href="form.html" class="button functional-food__link">Подобрать программу</a>
       </div>
     </header>
 
