--- a/source/index.html
+++ b/source/index.html
@@ -6,14 +6,16 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="page__body">
+
     <header class="page-header">
       <a class="page-header__logo">
         <img src="img/logo/logo-mobile-cat.svg" width="191" height="37" alt="логотип мобильный">
       </a>
+
       <nav class="main-nav">
         <ul class="main-nav__list">
           <li class="main-nav__item main-nav__item--active">
-            <a class="main-nav__link" href="#">
+            <a class="main-nav__link">
               Главная
             </a>
           </li>
@@ -30,12 +32,14 @@
         </ul>
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       </nav>
+
       <div class="functional-food">
         <h1 class="functional-food__title">Функциональное питание для котов</h1>
         <p class="functional-food__slogan">Занялся собой? Займись котом!</p>
         <img src="img/logo/logo-product.png" alt="Логотип продукта" width="280" height="270">
         <a href="form.html" class="button functional-food__link">Подобрать программу</a>
       </div>
+      
     </header>
 
     <main class="page-main">
