--- a/source/index.html
+++ b/source/index.html
@@ -8,31 +8,32 @@
   <body class="page__body">
 
     <header class="page-header">
-      <a class="page-header__logo">
-        <img src="img/logo/logo-mobile-cat.svg" width="191" height="37" alt="логотип мобильный">
-      </a>
+      <div class="page-header__wrapper">
+        <a class="page-header__logo">
+          <img src="img/logo/logo-mobile-cat.svg" width="191" height="37" alt="логотип мобильный">
+        </a>
 
-      <nav class="main-nav">
-        <ul class="main-nav__list">
-          <li class="main-nav__item main-nav__item--active">
-            <a class="main-nav__link">
-              Главная
-            </a>
-          </li>
-          <li class="main-nav__item" class="main-nav__item">
-            <a class="main-nav__link" href="catalog.html">
-              Каталог продукции
-            </a>
-          </li>
-          <li class="main-nav__item">
-            <a class="main-nav__link" href="form.html">
-              Подбор программы
-            </a>
-          </li>
-        </ul>
-        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-      </nav>
-
+        <nav class="main-nav">
+          <ul class="main-nav__list">
+            <li class="main-nav__item main-nav__item--active">
+              <a class="main-nav__link">
+                Главная
+              </a>
+            </li>
+            <li class="main-nav__item" class="main-nav__item">
+              <a class="main-nav__link" href="catalog.html">
+                Каталог продукции
+              </a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="form.html">
+                Подбор программы
+              </a>
+            </li>
+          </ul>
+          <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        </nav>
+      </div>
       <div class="functional-food">
         <h1 class="functional-food__title">Функциональное питание для котов</h1>
         <p class="functional-food__slogan">Занялся собой? Займись котом!</p>
