--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
     <link href="css/style.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scalre=1">
   </head>
   <body class="page__body">
     <header class="page-header">
