--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,7 @@
   </head>
   <body class="page__body">
 
-    <header class="page-header">
+    <header class="page-header page-header--desktop">
       <div class="page-header__wrapper">
         <a class="page-header__logo">
           <img class="page-header__logo-image" src="img/logo/logo-mobile-cat.svg" width="191" height="37" alt="логотип мобильный">
@@ -17,17 +17,17 @@
         <nav class="main-nav">
           <ul class="main-nav__list">
             <li class="main-nav__item main-nav__item--active">
-              <a class="main-nav__link">
+              <a class="main-nav__link main-nav__link--desktop">
                 Главная
               </a>
             </li>
-            <li class="main-nav__item" class="main-nav__item">
-              <a class="main-nav__link" href="catalog.html">
+            <li class="main-nav__item">
+              <a class="main-nav__link main-nav__link--desktop" href="catalog.html">
                 Каталог продукции
               </a>
             </li>
             <li class="main-nav__item">
-              <a class="main-nav__link" href="form.html">
+              <a class="main-nav__link main-nav__link--desktop" href="form.html">
                 Подбор программы
               </a>
             </li>
